--- a/데이터분석/데이터분석_06_앙상블분석_배깅_부스팅_랜덤포레스트.ipynb
+++ b/데이터분석/데이터분석_06_앙상블분석_배깅_부스팅_랜덤포레스트.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "id": "592a6819",
    "metadata": {},
    "outputs": [],
@@ -5820,13 +5820,7 @@
       "[233]\tvalidation_0-logloss:0.36610\n",
       "[234]\tvalidation_0-logloss:0.36600\n",
       "[235]\tvalidation_0-logloss:0.36587\n",
-      "[236]\tvalidation_0-logloss:0.36575\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[236]\tvalidation_0-logloss:0.36575\n",
       "[237]\tvalidation_0-logloss:0.36564\n",
       "[238]\tvalidation_0-logloss:0.36553\n",
       "[239]\tvalidation_0-logloss:0.36540\n",
